基本完成的第一版
补充了注释。
修正了配置文件的问题。
添加了两个测试用例。